fix overflowing poll options

--- a/src/app/views/poll-view/poll-view.component.scss
+++ b/src/app/views/poll-view/poll-view.component.scss
@@ -38,3 +38,8 @@
   display: flex;
   flex-direction: column;
 }
+
+.radio-content {
+  white-space: normal;
+  word-break: break-word;
+}
